# vibeprint

./: .gitignore  Cargo.toml  README.md  TODONEXT.txt  printer.icc
.kilo/plans/: 1777223149405-sunny-meadow.md  1777223910942-nimble-comet.md
.windsurf/plans/: push-ui-cleanup-998907.md
assets/icons/: README.md
src/: layout_engine.rs  lib.rs  main.rs  monitor_icc.rs  printer_discovery.rs  processor.rs
src/printer_discovery/: cups_ffi.rs
tests/: pipeline_validation.rs
