[package]
name = "vibeprint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
tiff = "0.11"
lcms2 = "6"
eframe = { version = "0.29", default-features = true }
egui_extras = { version = "0.29", features = ["image"] }
rfd = "0.14"
dirs = "5"

[dev-dependencies]
tempfile = "3"
