[package]
name = "vibeprint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
tiff = "0.11"
lcms2 = "6"
eframe = { version = "0.29", default-features = true }
egui_extras = { version = "0.29", features = ["image"] }
rfd = "0.14"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tempfile = "3"
x11 = { version = "2", features = ["xlib"], optional = true }
libc = { version = "0.2", optional = true }

[features]
default = ["monitor-icc"]
monitor-icc = ["x11", "libc"]

[dev-dependencies]
